<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="13"
    tools:context=".MainActivity"
    android:orientation="horizontal"
    android:layout_marginLeft="15dp">
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="0"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="10dp"
        android:textSize="11dp"
        android:inputType="textPersonName"
        android:id="@+id/FIO_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="1"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:textSize="11dp"
        android:id="@+id/Login_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="2"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:textSize="11dp"
        android:id="@+id/Email_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="3"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:textSize="11dp"
        android:id="@+id/Phone_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="4"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:textSize="11dp"
        android:inputType="textPassword"
        android:id="@+id/Password_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="5"
        android:background="@drawable/cell"
        android:layout_marginBottom="15dp"
        android:textSize="11dp"
        android:inputType="textPassword"
        android:id="@+id/RepPassword_edit"
        />
    <EditText android:layout_width="200dp"
        android:layout_height="22dp"
        android:layout_column="1"
        android:layout_row="6"
        android:background="@drawable/cell"
        android:textSize="11dp"
        android:inputType="date"
        android:id="@+id/BirthDate_edit"
        />
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="7"
        android:layout_marginTop="15dp"
        android:id="@+id/spinner_products"
        >
    </Spinner>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:layout_row="8"
        android:layout_marginTop="35dp"
        android:id="@+id/checkbox_1">
    </CheckBox>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/FIO"
        android:layout_marginTop="10dp"
        android:id="@+id/FIO_view"/>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/Login"
        android:id="@+id/Login_view"/>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="2"
        android:text="Email"
        android:id="@+id/Email_view"/>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/Phone_number"
        android:layout_marginRight="15dp"
        android:id="@+id/Phone_view"/>
    <TextView android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/Password"
        android:id="@+id/Password_view"/>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="5"
        android:text="@string/Rep_Password"
        android:id="@+id/RepPassword_view"/>
    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="6"
        android:text="@string/BirthDate"
        android:id="@+id/BirthDate_view"
        />
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="7"
        android:text="@string/Product"
        android:layout_marginTop="15dp"
        android:id="@+id/Product_view"
        />
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="8"
        android:text="@string/Agreement"
        android:layout_marginTop="15dp"
        android:lines="4"
        android:id="@+id/Agreement_view"
        />
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="9"
        android:text="@string/Button_validate"
        android:layout_marginTop="25dp"
        android:onClick="validate"
        android:id="@+id/button_validate"/>
    <TextView android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="10"
        android:text="@string/Language"
        android:layout_marginTop="50dp"
        android:id="@+id/Lang_view"></TextView>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="11"
        android:text="@string/Button_rus"
        android:onClick="onClick_rus"
        android:id="@+id/button_rus">
    </Button>
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="12"
        android:text="@string/Button_cs"
        android:onClick="onClick_cs"
        android:id="@+id/button_cs">
    </Button>

    <DatePicker
        android:id="@+id/dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0"
        android:visibility="gone"
        android:onClick="hideDP"></DatePicker>
</GridLayout>